# AutoCLI

./: Makefile  README.md  README.zh.md
.github/workflows/: release.yml
adapters/medium/: feed.yaml  search.yaml
adapters/twitter/: download.yaml  followers.yaml  following.yaml  notifications.yaml  profile.yaml  search.yaml
adapters/weread/: book.yaml  highlights.yaml  notebooks.yaml  notes.yaml  shelf.yaml
crates/autocli-browser/: Cargo.toml
crates/autocli-browser/src/: bridge.rs  lib.rs  playwright.rs
crates/autocli-cli/src/: execution.rs  main.rs
crates/autocli-pipeline/src/steps/: download.rs
crates/opencli-rs-ai/: Cargo.toml
crates/opencli-rs-ai/src/: cascade.rs  explore.rs  generate.rs  lib.rs  synthesize.rs  types.rs
crates/opencli-rs-browser/: Cargo.toml
crates/opencli-rs-pipeline/: Cargo.toml
crates/opencli-rs-pipeline/src/: lib.rs
crates/opencli-rs-pipeline/src/steps/: mod.rs  transform.rs
crates/opencli-rs-pipeline/src/template/: evaluator.rs  filters.rs  mod.rs  parser.rs
docs/superpowers/specs/: 2026-04-09-playwright-headless-browser-design.md
scripts/: install.sh  playwright-bridge.mjs
